Awesome card commit by Brian Musakwa

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <p>Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.ko-fi.com/" target="_blank" title="Ko-fi">Receive donations for your projects</a>
+                <a href="https://www.ko-fi.com/" target="_blank" title="Ko-fi">Receive donations for your awesome projects</a>
               </li>
               <li>
                 <a href="https://www.github.com/digreatbrian/buildozer-action.git" target="_blank" title="Buildozer">Convert your Kivy app to APK</a>
