--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ BakDavid card START ________  -->
+        <div class="card">
+          <p class="name">Bak David</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/david-bak-24a286197/" target="_blank">David Bak</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/BakDavid" target="_blank">BakDavid</a>
+          </p>
+          <p class="about">
+            Hey, I'm David! I'm a full-stack developer. Currently working on understanding a wide range of technologies
+            in my free time. Thanks for the possibility to contribute!
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - has the best courses">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ BakDavid card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
