--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Raghav card START ________  -->
+        <div class="card">
+          <p class="name">Raghav Tandulkar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/raghavv_977" target="_blank">Raghav Tandulkar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/raghav-97" target="_blank">Raghav Tandulkar</a>
+          </p>
+          <p class="about">Hi! T'm Raghav Tandulkar, a Student, Full Stack Wev Developer, OpenSource Programmer. Starting my new journey in DevOps and OpenSource Programming</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/freeCodeCamp" target="_blank" title="First Resource">freeCodeCamp.org</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Raghav card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
