--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Divyesh</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/divyesh.20_/" target="_blank">divyesh.20_</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Divyesh-20" target="_blank">Divyesh-20</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/tVzUXW6siu0?si=-hjBaywvePU7WFUq" target="_blank" title="First Resource">Code with Harry</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/learn" target="_blank" title="Second Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">w3schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
