--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ Reethika card START ________  -->
+         <div class="card">
+          <p class="name">Reethika</p>
+          <p class="contact">
+            <i class="fab fa-x-linkedin"></i>
+            <a href="https://www.linkedin.com/in/reethika-reddy-busireddy-7b9531249/" target="_blank">reethika-reddy-busireddy-7b9531249</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Reethika111" target="_blank">Reethika111</a>
+          </p>
+          <p class="about">
+            Hello, I'm Reethika! I'm a tech enthusiast passionate about DSA, problem solving and web development.I love exploring new technologies.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3 Schools is the best go to resource for beginners</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource"> FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource"> geeksforgeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Reethika card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
