Add vishwanthu13 card info

--- a/index.html
+++ b/index.html
@@ -90,6 +90,32 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Vishwanth Uppula</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/vichuvishwanth" target="_blank">@vichuvishwanth</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/vishwanthu13" target="_blank">vishwanthu13</a>
+          </p>
+          <p class="about">Code enthusiat , Travelling keeps me alive, Spread love , </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@hubermanlab" target="_blank" title="You cant control anything but the brain , better understand about it">Huberman lab podcast</a>
+              </li>
+              <li>
+                <a href="https://www.richdad.com/" target="_blank" title="Unlimited Money doesn't solve your problem, Managing what you have would definely solve the problem">Rich dad poor dad </a>
+              </li>
+              <li>
+                <a href="https://jamesclear.com/atomic-habits" target="_blank" title="The Quality of life depends upon the Quality of habitss">Atomic Habits</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
