Add silveryverse card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+        <!-- ________ silveryverse Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Rajat Rawat</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/hmmrajat" target="_blank">hmmrajat</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/silveryverse" target="_blank">silveryverse</a>
+          </p>
+          <p class="about">Hi! I'm Rajat... And I'm trying to figure this out.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://cs50.harvard.edu/x/2024/weeks/8/" target="_blank" title="CS50 by David J. Malan">CS50</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Good for Beginners">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://web.dev/" target="_blank" title="Web.dev, another good place to start">Web.dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ silveryverse Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
