Vítor's card + inconsistencies
Added a new card and fixed some of the comments that were missing compared to the README and inconsistent comments

--- a/index.html
+++ b/index.html
@@ -115,7 +115,45 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ unimaria card START ________  -->
+        <!-- Copy everything ABOVE this, from Contributor card START to END Start and End Comments included -->
+
+        <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
+        <!-- ================================================ --> 
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+        <!-- Keep one line of space above and below your card -->
+        <!-- ============== vvvv Paste YOUR CARD directly BELOW this line vvvv ============== -->
+
+        <!-- ________ vitormellogon's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Vítor Gonçalves</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/vitormellogon" target="_blank">Vítor Gonçalves</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vitormellogon" target="_blank">Vitormellogon</a>
+          </p>
+          <p class="about">
+            Hey, Contributors! I am an Information Management BSc student and also have been helping ESN out mostly on the frontend of an Inventory project. 
+            I am aiming to be proficient in machine learning and deep learning. I hope this git exercise will open you into contributing to great stuff.
+          </p>
+          <div class="resources">
+            <p>2 Useful Dev Resources + 1 ML</p>
+            <ul>
+              <li>
+                <a href="https://freecodez.com/html" target="_blank" title="Free Templates">Templates from Freecodez.</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/news/how-to-use-figma-to-design-websites/" target="_blank" title="Figma Design Course">Freecodecamp Course on Figma</a>
+              </li>
+              <li>
+                <a href="https://udlbook.github.io/udlbook/" target="_blank" title="If you are interested in Deep Learning">Understanding Deep Learning</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ vitormellogon's Contributor card END ________  -->
+
+        <!-- ________ unimaria's Contributor card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
           <p class="contact">
@@ -149,9 +187,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ unimaria card END ________  -->
+        <!-- ________ unimaria's Contributor card END ________  -->
 
-        <!-- ________ Advait Desai Card START ________  -->
+        <!-- ________ Advait Desai's Contributor Card START ________  -->
         <div class="card">
           <p class="name">Advait Desai</p>
           <p class="contact">
@@ -179,9 +217,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ Advait Desai card END ________  -->
+        <!-- ________ Advait Desai's Contributor card END ________  -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ MartinCactus' Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
@@ -215,9 +253,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ MartinCactus' Contributor card END ________  -->
 
-        <!-- ________ kelseadecker START ________  -->
+        <!-- ________ kelseadecker's Contributor START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
           <p class="contact">
@@ -245,9 +283,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ kelseadecker card END ________  -->
+        <!-- ________ kelseadecker's Contributor card END ________  -->
 
-        <!-- ________ marshallhhhh Contributor card START ________  -->
+        <!-- ________ marshallhhhh's Contributor card START ________  -->
         <div class="card">
           <p class="name">Marshall H</p>
           <p class="contact">
@@ -289,8 +327,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ marshallhhhh Contributor card END ________  -->
-        <!-- ________ Mohammad Farhaan Ali Contributor Card START ________ -->
+        <!-- ________ marshallhhhh's Contributor card END ________  -->
+
+        <!-- ________ Mohammad Farhaan Ali's Contributor Card START ________ -->
         <div class="card">
           <p class="name">Mohammad Farhaan Ali</p>
           <p class="contact">
@@ -324,9 +363,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ Mohammad Farhaan Ali Contributor Card END ________ -->
+        <!-- ________ Mohammad Farhaan Ali's Contributor Card END ________ -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ Timon Fiedler's Contributor Contributor card START ________  -->
         <div class="card">
           <p class="name">Timon Fiedler</p>
           <p class="contact">
@@ -365,10 +404,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Timon Fiedler's Contributor card END ________  -->
 
-        <!-- Contributors' Cards END -->
-
+        <!-- Ehtiram's Contributor card START -->
         <div class="card">
           <p class="name">Ehtiram</p>
           <p class="contact">
@@ -520,8 +558,6 @@
           </div>
         </div>
         <!-- KrakenM's Contributor card END -->
-
-        <!-- Contributors' Cards END -->
 
         <!-- ________ Dipanshu's Contributor card START ________  -->
         <div class="card">
