--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Faraz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/farazkhojasteh" target="_blank">Farazkhojasteh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/farazkh1" target="_blank">Farazkh1</a>
+          </p>
+          <p class="about">Hi, I'm Faraz. A newbie who loves data science while also developing AR games as part of my studies in Building Construction</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@freecodecamp" target="_blank" title="First Resource">Youtube, freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@FullStackWebDevelopment" target="_blank" title="Second Resource">Youtube, Full Stack Web Development</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@learncodeacademy" target="_blank" title="Third resource">Youtube, Learn Code Academy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
