--- a/index.html
+++ b/index.html
@@ -115,6 +115,39 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ _Godwin card START ________  -->
+        <div class="card">
+          <p class="name">Godwin Ogbodo</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/godwinCod3s" target="_blank">@godwinCod3s</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/godwinjs" target="_blank">@godwinjs</a>
+          </p>
+          <p class="about">
+            Hi, I'm Godwin, a passionate Fullstack Software and Web Developer with a keen interest in cutting-edge technologies.
+            Currently, I'm diving deep into the world of Large Language Models (LLMs) and fine-tuning models on platforms like 
+            Kaggle and Google Colab. With a strong foundation in both front-end and back-end development, I strive to create 
+            seamless and efficient web applications. My journey in the tech world is driven by curiosity and a relentless 
+            pursuit of innovation.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.linkedin.com/learning" target="_blank" title="LinkedIn with certifications for your learning path">LinkedIn Learning</a>
+              </li>
+              <li>
+                <a href="https://daily.dev" target="_blank" title="Keepup with daily updates about your fav tech">Daily Dev</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com" target="_blank" title="Solve algorithm challenges and prepare for live coding interviews">Leetcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ _Godwin card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
