_Godwin's card update

--- a/index.html
+++ b/index.html
@@ -125,11 +125,9 @@
             <a href="https://www.github.com/godwinjs" target="_blank">@godwinjs</a>
           </p>
           <p class="about">
-            Hi, I'm Godwin, a passionate Fullstack Software and Web Developer with a keen interest in cutting-edge technologies.
-            Currently, I'm diving deep into the world of Large Language Models (LLMs) and fine-tuning models on platforms like 
-            Kaggle and Google Colab. With a strong foundation in both front-end and back-end development, I strive to create 
-            seamless and efficient web applications. My journey in the tech world is driven by curiosity and a relentless 
-            pursuit of innovation.
+            Hi, I'm Godwin, Fullstack Software and Web Developer with a keen interest in cutting-edge technologies.
+            Currently, I'm diving deep into the world of AIs, LLMs and fine-tuning Models on Kaggle and Google Colab. 
+            My journey in the tech world is driven by curiosity and a relentless pursuit of innovation.
           </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
