_Godwin's card update

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.linkedin.com/learning" target="_blank" title="LinkedIn with certifications for your learning path">LinkedIn Learning</a>
+                <a href="https://www.linkedin.com/learning" target="_blank" title="get certifications for your learning path">LinkedIn Learning</a>
               </li>
               <li>
-                <a href="https://daily.dev" target="_blank" title="Keepup with daily updates about your fav tech">Daily Dev</a>
+                <a href="https://daily.dev" target="_blank" title="Keep up with daily updates about your favourite technologies">Daily Dev</a>
               </li>
               <li>
                 <a href="https://leetcode.com" target="_blank" title="Solve algorithm challenges and prepare for live coding interviews">Leetcode</a>
