_Godwin's card update

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="https://www.github.com/godwinjs" target="_blank">@godwinjs</a>
           </p>
           <p class="about">
-            Hi, I'm Godwin, Fullstack Software and Web Developer with a keen interest in cutting-edge technologies.
+            Hi, I'm Godwin, A Fullstack Software and Web Developer with a keen interest in cutting-edge technologies.
             Currently, I'm diving deep into the world of AIs, LLMs and fine-tuning Models on Kaggle and Google Colab. 
             My journey in the tech world is driven by curiosity and a relentless pursuit of innovation.
           </p>
