Hassan Ali adding his template card

--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,41 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        <!-- ________ Hassan Ali Template START ________  -->
+        <div class="card">
+          <p class="name">Hassan Ali</p>
+          <p class="contact">
+            <i class="fa-brands fa-google"></i>
+            <a href="https://www.google.com" target="_blank">dont use twitter lol</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/HassanAliRizvi" target="_blank">Hassan Ali GitHub</a>
+          </p>
+          <p class="about">
+            Hi! I am a Computer Science graduate looking to break into the world of Full Stack Web development industry
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Freecodecamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/problemset/" target="_blank" title="Second Resource">Leetcode!</a>
+              </li>
+              <li>
+                <a
+                  href="https://pll.harvard.edu/course/cs50-introduction-computer-science"
+                  target="_blank"
+                  title="Third resource"
+                >
+                  Harvard CS50x
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
@@ -1181,7 +1216,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *TEMPLATE* Hassan Ali card END ________  -->
 
         <!-- ________ kartikey's card START ________  -->
         <div class="card">
