Added OTISGS card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ OTISGS card START ________  -->
+        <div class="card">
+          <p class="name">Mariusz</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/OTISGS" target="_blank">OTISGS</a>
+          </p>
+          <p class="about">I'm a lazy young guy that will soon go to Collage and is intrested in programming</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="A good website to learn coding from start">W3schools</a>
+              </li>
+              <li>
+                <a href="https://cs50.harvard.edu/x/2025/" target="_blank" title="A good course from harvard">CS50x</a>
+              </li>
+              <li>
+                <a href="https://git-scm.com/doc" target="_blank" title="A git documentation, we all need it">Git docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ OTISGS card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
