--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,33 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ RAj2027 card START ________  -->
+        <div class="card">
+          <p class="name">codewithraj</p>
+          <p class="contact">
+            <i class="fab fa-x-instagram"></i>
+            <a href="https://www.linkedin.com/in/raj-bardhan-singh-371054309/" target="new">@me_artzzy</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/RAj2027" target="new">RAj2027</a>
+          </p>
+          <p class="about">I'm a student pursuing degree in B.Tech. Computer Science specializing in Artificial Intelligence and Machine Learning, and practicing Frontend.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://collectui.com/challenges/music-player" target="new" title="First Resource">collectui</a>
+              </li>
+              <li>
+                <a href="https://www.uidesigndaily.com/search?query=info+cards" target="new" title="Second Resource">uidesigndaily</a>
+              </li>
+              <li>
+                <a href="https://www.freefaces.gallery" target="new" title="Third resource">freefaces</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ RAj2027 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
