Add ervinerviansyah card info.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ ervinerviansyah card START ________  -->
+        <div class="card">
+          <p class="name">Ervin Erviansyah</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ervinerviansyah" target="_blank">ervinerviansyah</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ervinerviansyah" target="_blank">ervinerviansyah</a>
+          </p>
+          <p class="about">Hi, I'm Ervin Erviansyah. A graphic designer, writer, and actor from Bandung.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://bisakerjaremote.com/mindfulday" target="_blank" title="Mindfulday">Mindfulday - A platform to break down all your tasks.</a>
+              </li>
+              <li>
+                <a href="https://logseq.com/" target="_blank" title="Logseq">Logseq - A platform for journaling or your personal notes.</a>
+              </li>
+              <li>
+                <a href="https://www.deepl.com/en/translator" target="_blank" title="DeepL Translator">DeepL Translator - A platform to translate one language to another.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ervinerviansyah card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
