--- a/index.html
+++ b/index.html
@@ -115,6 +115,28 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Deskime card START ________  -->
+        <div class="card">
+          <p class="name">Deskime</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/deskime" target="_blank">Deskime</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/Deskime/Deskime_App" target="_blank" title="Coolest Desktop Customization App">Desktop Customization App</a>
+              </li>
+              <li>
+                <a href="https://github.com/Deskime/Windows-12" target="_blank" title="Coolest Windows Concept">Windows 12 Concept</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
