--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ *TEMPLATE: Will Clark START ________  -->
+        <div class="card">
+          <p class="name">Will Shifflett</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shifflett00" target="_blank">@shifflett00</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">@jwc-dwa</a>
+          </p>
+          <p class="about">Hello World! I'm intensely curious about mathematics, sciences, philosophies, artistic expressions, cultures, religions, machine learning, and AI. Peace, G!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="stack_overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com" target="_blank" title="chatgpt">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://w3schools.com" target="_blank" title="w3_schools">W3 Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Will Clark END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
