--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
             <i class="fab fa-linkedin"></i>
             <a href="https://www.linkedin.com/in/shifflett00" target="_blank">@shifflett00</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">@jwc-dwa</a>
+            <a href="https://www.github.com/jwc-dwa" target="_blank">@jwc-dwa</a>
           </p>
           <p class="about">Hello World! I'm intensely curious about mathematics, sciences, philosophies, artistic expressions, cultures, religions, machine learning, and AI. Peace, G!</p>
           <div class="resources">
