--- a/index.html
+++ b/index.html
@@ -3153,6 +3153,41 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+        <!-- ________ MickeyShahzad card START ________  -->
+        <div class="card">
+          <p class="name">Abdullah Shahzad</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/MickeyShahzad" target="_blank">@MickeyShahzad</a>
+          </p>
+          <p class="about">Data Science student, eager to contribute to open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/ossu/computer-science" target="_blank" title="OSSU - Computer Science">
+                  OSSU - Computer Science
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/EbookFoundation/free-programming-books"
+                  target="_blank"
+                  title="Free Programming Books"
+                >
+                  Free Programming Books
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="CS50's Youtube Channel">
+                  CS50's Youtube Channel
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ MickeyShahzad card END ________  -->
 
         <!-- ========= END ========= -->
 
