--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
     <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+    <link rel="stylesheet" href="https://@cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <title>Contribute To This Project</title>
     <script type="module" src="assets/script.js" defer=""></script>
@@ -1854,7 +1854,36 @@
           </div>
         </div>
         <!-- ________ jahess150 Contributor card END ________  -->
-
+                <!-- ========= HTMLSlander Card Start =========   -->
+                <div class="card">
+                  <p class="name">Joshua Cabanillas</p>
+                  <p class="contact">
+                    <i class="fa-brands fa-discord"></i>
+                    <a href="https://www.discord.com/ayeshaq_03999" target="_blank">byjoshua.</a>
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/HTMLSlander" target="_blank">HTMLSlander</a>
+                  </p>
+                  <p class="about">
+                    This is Joshua. I'm an aspiring Front End Developer with skills like Web Responsiveness (HTML & CSS), and currently expanding my knowledge on JavaScript, React, PHP and Wordpress, focusing on expanding UX/UI design and probably blockchain technology.
+                  </p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">
+                          Free Code Camp
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.w3schools.com/howto/" target="_blank" title="Second Resource">W3Schools How TO</a>
+                      </li>
+                      <li>
+                        <a href="https://github.com/" target="_blank" title="Third resource">GitHub</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ========= Ayesha Card END =========   -->
         <!-- ________ Viet's card ________  -->
         <div class="card">
           <p class="name">Viet Nguyen</p>
