--- a/index.html
+++ b/index.html
@@ -3159,9 +3159,9 @@
           <p class="name">codewithraj</p>
           <p class="contact">
             <i class="fab fa-x-instagram"></i>
-            <a href="https://www.linkedin.com/in/raj-bardhan-singh-371054309/" target="new">@me_artzzy</a>
+            <a href="https://www.linkedin.com/in/raj-bardhan-singh-371054309/" target="_blank">@me_artzzy</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/RAj2027" target="new">RAj2027</a>
+            <a href="https://github.com/RAj2027" target="_blank">RAj2027</a>
           </p>
           <p class="about">I'm a student pursuing degree in B.Tech. Computer Science specializing in Artificial Intelligence and Machine Learning, and practicing Frontend.</p>
           <div class="resources">
