--- a/index.html
+++ b/index.html
@@ -3168,13 +3168,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://collectui.com/challenges/music-player" target="new" title="First Resource">collectui</a>
+                <a href="https://collectui.com/challenges/music-player" target="_blank" title="First Resource">collectui</a>
               </li>
               <li>
-                <a href="https://www.uidesigndaily.com/search?query=info+cards" target="new" title="Second Resource">uidesigndaily</a>
+                <a href="https://www.uidesigndaily.com/search?query=info+cards" target="_blank" title="Second Resource">uidesigndaily</a>
               </li>
               <li>
-                <a href="https://www.freefaces.gallery" target="new" title="Third resource">freefaces</a>
+                <a href="https://www.freefaces.gallery" target="_blank" title="Third resource">freefaces</a>
               </li>
             </ul>
           </div>
