--- a/index.html
+++ b/index.html
@@ -90,25 +90,29 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Mehrab</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://x.com/MehrabH07" target="_blank">MerhabH07</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://github.com/mehrab7647" target="_blank">mehrab7647</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">CS student at the University of Regina</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://www.youtube.com/watch?v=8XJzdjhVrpw" target="_blank" title="A great video about when you shouldn't use boolean functions">The problem with boolean functions</a>
+                <a
+                  href="https://www.youtube.com/watch?v=8XJzdjhVrpw"
+                  target="_blank"
+                  title="A great video about when you shouldn't use boolean functions"
+                >
+                  The problem with boolean functions
+                </a>
               </li>
             </ul>
           </div>
