--- a/index.html
+++ b/index.html
@@ -3153,6 +3153,38 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+         <!-- ________ KhushiPandey8 card START ________  -->
+ <div class="card">
+  <p class="name">Khushi Pandey</p>
+  <p class="contact">
+    <i class="fab fa-linkedin"></i>
+    <a href="https://www.linkedin.com/in/khushipandey8" target="_blank">@KhushiPandey</a>
+    <i class="fab fa-github"></i>
+    <a href="https://www.github.com/KhushiPandey8" target="_blank">@KhushiPandey</a>
+  </p>
+  <p class="about">A passionate Software Developer, exploring AI, ML, and open-source contributions.</p>
+  <div class="resources">
+    <p>3 Useful Dev Resources</p>
+    <ul>
+      <li>
+        <a href="https://roadmap.sh" target="_blank" title="Developer Roadmaps">
+          Developer Roadmaps
+        </a>
+      </li>
+      <li>
+        <a href="https://www.freecodecamp.org" target="_blank" title="freeCodeCamp">
+          freeCodeCamp - Learn to Code for Free
+        </a>
+      </li>
+      <li>
+        <a href="https://www.geeksforgeeks.org" target="_blank" title="GeeksforGeeks">
+          GeeksforGeeks - Coding and Interview Prep
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- ________ KhushiPandey8 card END ________  -->
 
         <!-- ========= END ========= -->
 
