--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,31 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ *ignacio card START ________  -->
+        <div class="card">
+          <p class="name">ignacio</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ignaciozhuzhu" target="_blank">ignaciozhuzhu</a>
+          </p>
+          <p class="about">A front-end developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.deepseek.com/" target="_blank" title="First Resource">deepseek</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com" target="_blank" title="Third Resource">ai</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *ignacio card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
