index file changed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Prabha</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
@@ -102,13 +102,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://www.twitter.com" target="_blank" title="First Resource">Twitter</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.github.com" target="_blank" title="Second Resource">Git Hub</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">FreeCodeCamp</a>
               </li>
             </ul>
           </div>
