--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Prabha</p>
+          <p class="name">Prabha Nagaraj</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">I'm a full-stack developer . I'm eager to begin my journey of contributing to open-source projects and looking forward to the experience ahead.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.twitter.com" target="_blank" title="First Resource">Twitter</a>
+                <a href="https://www.udemy.com/" target="_blank" title="First Resource">Udemy</a>
               </li>
               <li>
                 <a href="https://www.github.com" target="_blank" title="Second Resource">Git Hub</a>
               </li>
               <li>
-                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">FreeCodeCamp</a>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">Free Code Camp</a>
               </li>
             </ul>
           </div>
