Added Tino card

--- a/index.html
+++ b/index.html
@@ -115,7 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ unimaria card START ________  -->
+
+        <!-- ________ *Passion Over Pain* Contributor card START ________  -->
+ <div class="card">
+  <p class="name">Tinotenda Mhedziso</p>
+  <p class="contact">
+    <i class="fa-solid fa-user-ninja"></i>
+    <a href="https://tinotenda-mhedziso.pages.dev/" target="_blank">My Website</a>
+    <i class="fab fa-github"></i>
+    <a href="https://www.github.com/Passion-Over-Pain" target="_blank">Passion-Over-Pain</a>
+  </p>
+  <p class="about"><strong>𝙵𝚒𝚗𝚊𝚕-𝚢𝚎𝚊𝚛 𝙱𝚜𝚌 𝙸𝚗𝚏𝚘𝚛𝚖𝚊𝚝𝚒𝚘𝚗 𝚃𝚎𝚌𝚑𝚗𝚘𝚕𝚘𝚐𝚢 𝚜𝚝𝚞𝚍𝚎𝚗𝚝 𝚊𝚗𝚍 𝚓𝚞𝚗𝚒𝚘𝚛 𝚜𝚘𝚏𝚝𝚠𝚊𝚛𝚎 𝚍𝚎𝚟𝚎𝚕𝚘𝚙𝚎r. 𝚃𝚘 𝚖𝚎, 𝚙𝚛𝚘𝚐𝚛𝚊𝚖𝚖𝚒𝚗𝚐 𝚒𝚜 𝚜𝚒𝚖𝚒𝚕𝚊𝚛 𝚝𝚘 𝚌𝚘𝚗𝚚𝚞𝚎𝚛𝚒𝚗𝚐 𝚊 𝚌𝚑𝚊𝚕𝚕𝚎𝚗𝚐𝚒𝚗𝚐 𝚟𝚒𝚍𝚎𝚘 𝚐𝚊𝚖𝚎 𝚋𝚘𝚜𝚜: 𝚜𝚞𝚌𝚌𝚎𝚜𝚜 𝚘𝚏𝚝𝚎𝚗 𝚛𝚎𝚚𝚞𝚒𝚛𝚎𝚜 𝚙𝚎𝚛𝚜𝚒𝚜𝚝𝚎𝚗𝚌𝚎, 𝚕𝚎𝚊𝚛𝚗𝚒𝚗𝚐, 𝚊𝚗𝚍 𝚊𝚍𝚊𝚙𝚝𝚊𝚋𝚒𝚕𝚒𝚝𝚢 ( 𝚞𝚗𝚕𝚎𝚜𝚜 𝚒𝚝'𝚜 𝙳𝚊𝚛𝚔 𝚂𝚘𝚞𝚕𝚜🤗)</strong>.</p>
+  <div class="resources">
+    <p>3 Useful Dev Resources</p>
+    <ul>
+      <li>
+        <a href="https://dribbble.com/" target="_blank" title="Designer centered website for inspiration">Dribbble</a>
+      </li>
+      <li>
+        <a href="https://playground.com/" target="_blank" title="AI website to create stunning designs for MVP">Playground</a>
+      </li>
+      <li>
+        <a href="https://uiverse.io/" target="_blank" title="A platform filled with free CSS assets">UIverse</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- ________ *Passion Over Pain* Contributor card END ________  -->
+
+
+         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
           <p class="contact">
