--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- AKhand's Card START -->
+
+        <div class="card">
+          <p class="name">Akhand Pratap Singh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/akhand_06x" target="_blank">@akhand_06x</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Akhand0ps" target="_blank">@Akhand0ps</a>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/_.livin.g/" target="_blank">@_.livin.g</a>
+          </p>
+          <p class="about">I'm a programmer who loves building crazy things. This is my first open-source contribution</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.com/" target="_blank" title="First Resource">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.stackoverflow.com/" target="_blank" title="Second Resource">STACK OVERFLOW</a>
+              </li>
+              <li>
+                <a href="https://www.100xdevs.com/" target="_blank" title="Third resource">100xdevs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+         <!-- Akhand's Card END -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
